<?xml version="1.0"?>
<package format="2">
  <name>fourth</name>
  <version>0.0.0</version>
  <description>The fourth package</description>


  <maintainer email="chidro@todo.todo">chidro</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>


  <build_export_depend>ar_track_alvar_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>ar_track_alvar_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
